# serializer version: 1
# name: test_filter_people_by_name
  list([
    ImmichPerson(
      birth_date=None,
      color=None,
      is_favorite=False,
      is_hidden=False,
      name='Myself',
      person_id='a3c83297-684a-4576-82dc-b07432e8a18f',
      thumbnail_path='upload/thumbs/e7ef5713-9dab-4bd4-b899-715b0ca4379e/a3/c8/a3c83297-684a-4576-82dc-b07432e8a18f.jpeg',
      updated_at=datetime.datetime(2025, 5, 12, 21, 7, 4, 44000, tzinfo=datetime.timezone.utc),
    ),
  ])
# ---
# name: test_get_all_people
  list([
    ImmichPerson(
      birth_date=None,
      color=None,
      is_favorite=False,
      is_hidden=False,
      name='Me',
      person_id='6176838a-ac5a-4d1f-9a35-91c591d962d8',
      thumbnail_path='upload/thumbs/e7ef5713-9dab-4bd4-b899-715b0ca4379e/61/76/6176838a-ac5a-4d1f-9a35-91c591d962d8.jpeg',
      updated_at=datetime.datetime(2025, 5, 11, 11, 7, 41, 651000, tzinfo=datetime.timezone.utc),
    ),
    ImmichPerson(
      birth_date=None,
      color=None,
      is_favorite=False,
      is_hidden=False,
      name='I',
      person_id='3e66aa4a-a4a8-41a4-86fe-2ae5e490078f',
      thumbnail_path='upload/thumbs/e7ef5713-9dab-4bd4-b899-715b0ca4379e/3e/66/3e66aa4a-a4a8-41a4-86fe-2ae5e490078f.jpeg',
      updated_at=datetime.datetime(2025, 5, 19, 22, 10, 21, 953000, tzinfo=datetime.timezone.utc),
    ),
    ImmichPerson(
      birth_date=None,
      color=None,
      is_favorite=False,
      is_hidden=False,
      name='Myself',
      person_id='a3c83297-684a-4576-82dc-b07432e8a18f',
      thumbnail_path='upload/thumbs/e7ef5713-9dab-4bd4-b899-715b0ca4379e/a3/c8/a3c83297-684a-4576-82dc-b07432e8a18f.jpeg',
      updated_at=datetime.datetime(2025, 5, 12, 21, 7, 4, 44000, tzinfo=datetime.timezone.utc),
    ),
  ])
# ---
# name: test_get_person_by_id
  ImmichPerson(
    birth_date=None,
    color=None,
    is_favorite=False,
    is_hidden=False,
    name='Me',
    person_id='6176838a-ac5a-4d1f-9a35-91c591d962d8',
    thumbnail_path='upload/thumbs/e7ef5713-9dab-4bd4-b899-715b0ca4379e/61/76/6176838a-ac5a-4d1f-9a35-91c591d962d8.jpeg',
    updated_at=datetime.datetime(2025, 5, 11, 11, 7, 41, 651000, tzinfo=datetime.timezone.utc),
  )
# ---
